syntax="proto3";

package categories;

import "entity.proto";
import "dto.proto";

service CategoriesService {
  rpc FetchParentCategories(dto.FetchRequest) returns (FetchCategoriesResponse);
  rpc FetchChildCategories(FetchChildCategoriesRequest) returns (FetchCategoriesResponse);
}

//request--------------------------------------

message FetchChildCategoriesRequest {
  optional int64 parent_category_id = 1;
  optional dto.FetchRequest fetch_dto = 2;
}

//responses--------------------------------------

message FetchCategoriesResponse {
  repeated entity.GoodCategory data = 1;
}